src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Receive_Portal_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Portal Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Staff_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Staff Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Concierge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Concierge</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>